// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renderer/components/notifications/ProductNotifications.tsx should render itself & its children - dark mode 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="css-1npayr"
      >
        <div
          class="css-1cphzq1"
        >
          <div
            class="css-1a0x9v0"
          >
            <div
              role="presentation"
            >
              <button
                class="css-eu6vk3"
                data-testid="product-home"
                type="button"
              >
                <span
                  class="css-1nqby2s"
                >
                  <div
                    class="css-1v6wdk"
                  >
                    <span
                      aria-label="Bitbucket"
                      class="css-5vjqu0"
                      role="img"
                      style="--logo-color: inherit; --logo-fill: currentColor;"
                    >
                      <svg
                        aria-hidden="true"
                        fill="none"
                        focusable="false"
                        height="32"
                        viewBox="0 0 32 32"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        
      
                        <path
                          d="m25.586 15.819-1.618 9.885c-.106.598-.528.95-1.126.95H9.122c-.598 0-1.02-.352-1.126-.95L5.146 8.08c-.105-.598.212-.985.775-.985h20.123c.562 0 .88.387.773.985l-.773 4.644c-.106.668-.493.95-1.126.95H12.816c-.176 0-.282.105-.246.316l.95 5.84c.035.14.14.246.281.246h4.362c.141 0 .246-.105.282-.246l.668-4.222c.07-.527.422-.738.915-.738h4.75c.703 0 .914.351.808.95"
                          fill="#1868DB"
                        />
                        
    
                      </svg>
                    </span>
                    <span
                      class="capitalize"
                    >
                      bitbucket
                    </span>
                    <span
                      class="css-1wkl091"
                    >
                      <span
                        class="css-f9etm4"
                      >
                        2
                      </span>
                    </span>
                  </div>
                   
                </span>
              </button>
            </div>
            <div
              class="css-gokkc4"
            >
              <div
                role="presentation"
              >
                <button
                  class="css-1vyxgfe"
                  data-testid="product-mark-as-read"
                  type="button"
                >
                  <span
                    class="css-1spmf3f"
                  >
                    <span
                      aria-hidden="true"
                      class="css-1wits42"
                      data-vc="icon-undefined"
                      style="--icon-primary-color: currentColor; --icon-secondary-color: var(--ds-surface, #FFFFFF);"
                    >
                      <svg
                        height="24"
                        role="presentation"
                        viewBox="0 0 24 24"
                        width="24"
                      >
                        <circle
                          cx="12"
                          cy="12"
                          fill="currentcolor"
                          fill-rule="evenodd"
                          r="5"
                        />
                      </svg>
                    </span>
                    <span
                      class="css-b5o75w"
                    >
                      Mark all product notifications as read
                    </span>
                  </span>
                </button>
              </div>
              <div
                role="presentation"
              >
                <button
                  class="css-1vyxgfe"
                  data-testid="product-toggle"
                  type="button"
                >
                  <span
                    class="css-1spmf3f"
                  >
                    <span
                      aria-hidden="true"
                      class="css-snhnyn"
                      data-vc="icon-undefined"
                      style="--icon-primary-color: currentColor; --icon-secondary-color: var(--ds-surface, #FFFFFF);"
                    >
                      <svg
                        height="24"
                        role="presentation"
                        viewBox="0 0 24 24"
                        width="24"
                      >
                        <path
                          d="M8.292 10.293a1.01 1.01 0 0 0 0 1.419l2.939 2.965c.218.215.5.322.779.322s.556-.107.769-.322l2.93-2.955a1.01 1.01 0 0 0 0-1.419.987.987 0 0 0-1.406 0l-2.298 2.317-2.307-2.327a.99.99 0 0 0-1.406 0"
                          fill="currentcolor"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                    <span
                      class="css-b5o75w"
                    >
                      Hide product notifications
                    </span>
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
        <div>
          NotificationRow
        </div>
        <div>
          NotificationRow
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="css-1npayr"
    >
      <div
        class="css-1cphzq1"
      >
        <div
          class="css-1a0x9v0"
        >
          <div
            role="presentation"
          >
            <button
              class="css-eu6vk3"
              data-testid="product-home"
              type="button"
            >
              <span
                class="css-1nqby2s"
              >
                <div
                  class="css-1v6wdk"
                >
                  <span
                    aria-label="Bitbucket"
                    class="css-5vjqu0"
                    role="img"
                    style="--logo-color: inherit; --logo-fill: currentColor;"
                  >
                    <svg
                      aria-hidden="true"
                      fill="none"
                      focusable="false"
                      height="32"
                      viewBox="0 0 32 32"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      
      
                      <path
                        d="m25.586 15.819-1.618 9.885c-.106.598-.528.95-1.126.95H9.122c-.598 0-1.02-.352-1.126-.95L5.146 8.08c-.105-.598.212-.985.775-.985h20.123c.562 0 .88.387.773.985l-.773 4.644c-.106.668-.493.95-1.126.95H12.816c-.176 0-.282.105-.246.316l.95 5.84c.035.14.14.246.281.246h4.362c.141 0 .246-.105.282-.246l.668-4.222c.07-.527.422-.738.915-.738h4.75c.703 0 .914.351.808.95"
                        fill="#1868DB"
                      />
                      
    
                    </svg>
                  </span>
                  <span
                    class="capitalize"
                  >
                    bitbucket
                  </span>
                  <span
                    class="css-1wkl091"
                  >
                    <span
                      class="css-f9etm4"
                    >
                      2
                    </span>
                  </span>
                </div>
                 
              </span>
            </button>
          </div>
          <div
            class="css-gokkc4"
          >
            <div
              role="presentation"
            >
              <button
                class="css-1vyxgfe"
                data-testid="product-mark-as-read"
                type="button"
              >
                <span
                  class="css-1spmf3f"
                >
                  <span
                    aria-hidden="true"
                    class="css-1wits42"
                    data-vc="icon-undefined"
                    style="--icon-primary-color: currentColor; --icon-secondary-color: var(--ds-surface, #FFFFFF);"
                  >
                    <svg
                      height="24"
                      role="presentation"
                      viewBox="0 0 24 24"
                      width="24"
                    >
                      <circle
                        cx="12"
                        cy="12"
                        fill="currentcolor"
                        fill-rule="evenodd"
                        r="5"
                      />
                    </svg>
                  </span>
                  <span
                    class="css-b5o75w"
                  >
                    Mark all product notifications as read
                  </span>
                </span>
              </button>
            </div>
            <div
              role="presentation"
            >
              <button
                class="css-1vyxgfe"
                data-testid="product-toggle"
                type="button"
              >
                <span
                  class="css-1spmf3f"
                >
                  <span
                    aria-hidden="true"
                    class="css-snhnyn"
                    data-vc="icon-undefined"
                    style="--icon-primary-color: currentColor; --icon-secondary-color: var(--ds-surface, #FFFFFF);"
                  >
                    <svg
                      height="24"
                      role="presentation"
                      viewBox="0 0 24 24"
                      width="24"
                    >
                      <path
                        d="M8.292 10.293a1.01 1.01 0 0 0 0 1.419l2.939 2.965c.218.215.5.322.779.322s.556-.107.769-.322l2.93-2.955a1.01 1.01 0 0 0 0-1.419.987.987 0 0 0-1.406 0l-2.298 2.317-2.307-2.327a.99.99 0 0 0-1.406 0"
                        fill="currentcolor"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                  <span
                    class="css-b5o75w"
                  >
                    Hide product notifications
                  </span>
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div>
        NotificationRow
      </div>
      <div>
        NotificationRow
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`renderer/components/notifications/ProductNotifications.tsx should render itself & its children - light mode 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="css-1npayr"
      >
        <div
          class="css-y1gd9p"
        >
          <div
            class="css-1a0x9v0"
          >
            <div
              role="presentation"
            >
              <button
                class="css-eu6vk3"
                data-testid="product-home"
                type="button"
              >
                <span
                  class="css-1nqby2s"
                >
                  <div
                    class="css-1v6wdk"
                  >
                    <span
                      aria-label="Bitbucket"
                      class="css-5vjqu0"
                      role="img"
                      style="--logo-color: inherit; --logo-fill: currentColor;"
                    >
                      <svg
                        aria-hidden="true"
                        fill="none"
                        focusable="false"
                        height="32"
                        viewBox="0 0 32 32"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        
      
                        <path
                          d="m25.586 15.819-1.618 9.885c-.106.598-.528.95-1.126.95H9.122c-.598 0-1.02-.352-1.126-.95L5.146 8.08c-.105-.598.212-.985.775-.985h20.123c.562 0 .88.387.773.985l-.773 4.644c-.106.668-.493.95-1.126.95H12.816c-.176 0-.282.105-.246.316l.95 5.84c.035.14.14.246.281.246h4.362c.141 0 .246-.105.282-.246l.668-4.222c.07-.527.422-.738.915-.738h4.75c.703 0 .914.351.808.95"
                          fill="#1868DB"
                        />
                        
    
                      </svg>
                    </span>
                    <span
                      class="capitalize"
                    >
                      bitbucket
                    </span>
                    <span
                      class="css-1wkl091"
                    >
                      <span
                        class="css-f9etm4"
                      >
                        2
                      </span>
                    </span>
                  </div>
                   
                </span>
              </button>
            </div>
            <div
              class="css-gokkc4"
            >
              <div
                role="presentation"
              >
                <button
                  class="css-1vyxgfe"
                  data-testid="product-mark-as-read"
                  type="button"
                >
                  <span
                    class="css-1spmf3f"
                  >
                    <span
                      aria-hidden="true"
                      class="css-1wits42"
                      data-vc="icon-undefined"
                      style="--icon-primary-color: currentColor; --icon-secondary-color: var(--ds-surface, #FFFFFF);"
                    >
                      <svg
                        height="24"
                        role="presentation"
                        viewBox="0 0 24 24"
                        width="24"
                      >
                        <circle
                          cx="12"
                          cy="12"
                          fill="currentcolor"
                          fill-rule="evenodd"
                          r="5"
                        />
                      </svg>
                    </span>
                    <span
                      class="css-b5o75w"
                    >
                      Mark all product notifications as read
                    </span>
                  </span>
                </button>
              </div>
              <div
                role="presentation"
              >
                <button
                  class="css-1vyxgfe"
                  data-testid="product-toggle"
                  type="button"
                >
                  <span
                    class="css-1spmf3f"
                  >
                    <span
                      aria-hidden="true"
                      class="css-snhnyn"
                      data-vc="icon-undefined"
                      style="--icon-primary-color: currentColor; --icon-secondary-color: var(--ds-surface, #FFFFFF);"
                    >
                      <svg
                        height="24"
                        role="presentation"
                        viewBox="0 0 24 24"
                        width="24"
                      >
                        <path
                          d="M8.292 10.293a1.01 1.01 0 0 0 0 1.419l2.939 2.965c.218.215.5.322.779.322s.556-.107.769-.322l2.93-2.955a1.01 1.01 0 0 0 0-1.419.987.987 0 0 0-1.406 0l-2.298 2.317-2.307-2.327a.99.99 0 0 0-1.406 0"
                          fill="currentcolor"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                    <span
                      class="css-b5o75w"
                    >
                      Hide product notifications
                    </span>
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
        <div>
          NotificationRow
        </div>
        <div>
          NotificationRow
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="css-1npayr"
    >
      <div
        class="css-y1gd9p"
      >
        <div
          class="css-1a0x9v0"
        >
          <div
            role="presentation"
          >
            <button
              class="css-eu6vk3"
              data-testid="product-home"
              type="button"
            >
              <span
                class="css-1nqby2s"
              >
                <div
                  class="css-1v6wdk"
                >
                  <span
                    aria-label="Bitbucket"
                    class="css-5vjqu0"
                    role="img"
                    style="--logo-color: inherit; --logo-fill: currentColor;"
                  >
                    <svg
                      aria-hidden="true"
                      fill="none"
                      focusable="false"
                      height="32"
                      viewBox="0 0 32 32"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      
      
                      <path
                        d="m25.586 15.819-1.618 9.885c-.106.598-.528.95-1.126.95H9.122c-.598 0-1.02-.352-1.126-.95L5.146 8.08c-.105-.598.212-.985.775-.985h20.123c.562 0 .88.387.773.985l-.773 4.644c-.106.668-.493.95-1.126.95H12.816c-.176 0-.282.105-.246.316l.95 5.84c.035.14.14.246.281.246h4.362c.141 0 .246-.105.282-.246l.668-4.222c.07-.527.422-.738.915-.738h4.75c.703 0 .914.351.808.95"
                        fill="#1868DB"
                      />
                      
    
                    </svg>
                  </span>
                  <span
                    class="capitalize"
                  >
                    bitbucket
                  </span>
                  <span
                    class="css-1wkl091"
                  >
                    <span
                      class="css-f9etm4"
                    >
                      2
                    </span>
                  </span>
                </div>
                 
              </span>
            </button>
          </div>
          <div
            class="css-gokkc4"
          >
            <div
              role="presentation"
            >
              <button
                class="css-1vyxgfe"
                data-testid="product-mark-as-read"
                type="button"
              >
                <span
                  class="css-1spmf3f"
                >
                  <span
                    aria-hidden="true"
                    class="css-1wits42"
                    data-vc="icon-undefined"
                    style="--icon-primary-color: currentColor; --icon-secondary-color: var(--ds-surface, #FFFFFF);"
                  >
                    <svg
                      height="24"
                      role="presentation"
                      viewBox="0 0 24 24"
                      width="24"
                    >
                      <circle
                        cx="12"
                        cy="12"
                        fill="currentcolor"
                        fill-rule="evenodd"
                        r="5"
                      />
                    </svg>
                  </span>
                  <span
                    class="css-b5o75w"
                  >
                    Mark all product notifications as read
                  </span>
                </span>
              </button>
            </div>
            <div
              role="presentation"
            >
              <button
                class="css-1vyxgfe"
                data-testid="product-toggle"
                type="button"
              >
                <span
                  class="css-1spmf3f"
                >
                  <span
                    aria-hidden="true"
                    class="css-snhnyn"
                    data-vc="icon-undefined"
                    style="--icon-primary-color: currentColor; --icon-secondary-color: var(--ds-surface, #FFFFFF);"
                  >
                    <svg
                      height="24"
                      role="presentation"
                      viewBox="0 0 24 24"
                      width="24"
                    >
                      <path
                        d="M8.292 10.293a1.01 1.01 0 0 0 0 1.419l2.939 2.965c.218.215.5.322.779.322s.556-.107.769-.322l2.93-2.955a1.01 1.01 0 0 0 0-1.419.987.987 0 0 0-1.406 0l-2.298 2.317-2.307-2.327a.99.99 0 0 0-1.406 0"
                        fill="currentcolor"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                  <span
                    class="css-b5o75w"
                  >
                    Hide product notifications
                  </span>
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div>
        NotificationRow
      </div>
      <div>
        NotificationRow
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`renderer/components/notifications/ProductNotifications.tsx should toggle product notifications visibility 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="css-1npayr"
      >
        <div
          class="css-1cphzq1"
        >
          <div
            class="css-1a0x9v0"
          >
            <div
              role="presentation"
            >
              <button
                class="css-eu6vk3"
                data-testid="product-home"
                type="button"
              >
                <span
                  class="css-1nqby2s"
                >
                  <div
                    class="css-1v6wdk"
                  >
                    <span
                      aria-label="Bitbucket"
                      class="css-5vjqu0"
                      role="img"
                      style="--logo-color: inherit; --logo-fill: currentColor;"
                    >
                      <svg
                        aria-hidden="true"
                        fill="none"
                        focusable="false"
                        height="32"
                        viewBox="0 0 32 32"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        
      
                        <path
                          d="m25.586 15.819-1.618 9.885c-.106.598-.528.95-1.126.95H9.122c-.598 0-1.02-.352-1.126-.95L5.146 8.08c-.105-.598.212-.985.775-.985h20.123c.562 0 .88.387.773.985l-.773 4.644c-.106.668-.493.95-1.126.95H12.816c-.176 0-.282.105-.246.316l.95 5.84c.035.14.14.246.281.246h4.362c.141 0 .246-.105.282-.246l.668-4.222c.07-.527.422-.738.915-.738h4.75c.703 0 .914.351.808.95"
                          fill="#1868DB"
                        />
                        
    
                      </svg>
                    </span>
                    <span
                      class="capitalize"
                    >
                      bitbucket
                    </span>
                    <span
                      class="css-1wkl091"
                    >
                      <span
                        class="css-f9etm4"
                      >
                        2
                      </span>
                    </span>
                  </div>
                   
                </span>
              </button>
            </div>
            <div
              class="css-gokkc4"
            >
              <div
                role="presentation"
              >
                <button
                  class="css-1vyxgfe"
                  data-testid="product-mark-as-read"
                  type="button"
                >
                  <span
                    class="css-1spmf3f"
                  >
                    <span
                      aria-hidden="true"
                      class="css-1wits42"
                      data-vc="icon-undefined"
                      style="--icon-primary-color: currentColor; --icon-secondary-color: var(--ds-surface, #FFFFFF);"
                    >
                      <svg
                        height="24"
                        role="presentation"
                        viewBox="0 0 24 24"
                        width="24"
                      >
                        <circle
                          cx="12"
                          cy="12"
                          fill="currentcolor"
                          fill-rule="evenodd"
                          r="5"
                        />
                      </svg>
                    </span>
                    <span
                      class="css-b5o75w"
                    >
                      Mark all product notifications as read
                    </span>
                  </span>
                </button>
              </div>
              <div
                role="presentation"
              >
                <button
                  class="css-1vyxgfe"
                  data-testid="product-toggle"
                  type="button"
                >
                  <span
                    class="css-1spmf3f"
                  >
                    <span
                      aria-hidden="true"
                      class="css-snhnyn"
                      data-vc="icon-undefined"
                      style="--icon-primary-color: currentColor; --icon-secondary-color: var(--ds-surface, #FFFFFF);"
                    >
                      <svg
                        height="24"
                        role="presentation"
                        viewBox="0 0 24 24"
                        width="24"
                      >
                        <path
                          d="M10.294 9.698a.99.99 0 0 1 0-1.407 1.01 1.01 0 0 1 1.419 0l2.965 2.94a1.09 1.09 0 0 1 0 1.548l-2.955 2.93a1.01 1.01 0 0 1-1.42 0 .99.99 0 0 1 0-1.407l2.318-2.297z"
                          fill="currentcolor"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                    <span
                      class="css-b5o75w"
                    >
                      Show product notifications
                    </span>
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        class="css-1npayr"
      >
        <div
          class="css-1cphzq1"
        >
          <div
            class="css-1a0x9v0"
          >
            <div
              role="presentation"
            >
              <button
                class="css-eu6vk3"
                data-testid="product-home"
                type="button"
              >
                <span
                  class="css-1nqby2s"
                >
                  <div
                    class="css-1v6wdk"
                  >
                    <span
                      aria-label="Bitbucket"
                      class="css-5vjqu0"
                      role="img"
                      style="--logo-color: inherit; --logo-fill: currentColor;"
                    >
                      <svg
                        aria-hidden="true"
                        fill="none"
                        focusable="false"
                        height="32"
                        viewBox="0 0 32 32"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        
      
                        <path
                          d="m25.586 15.819-1.618 9.885c-.106.598-.528.95-1.126.95H9.122c-.598 0-1.02-.352-1.126-.95L5.146 8.08c-.105-.598.212-.985.775-.985h20.123c.562 0 .88.387.773.985l-.773 4.644c-.106.668-.493.95-1.126.95H12.816c-.176 0-.282.105-.246.316l.95 5.84c.035.14.14.246.281.246h4.362c.141 0 .246-.105.282-.246l.668-4.222c.07-.527.422-.738.915-.738h4.75c.703 0 .914.351.808.95"
                          fill="#1868DB"
                        />
                        
    
                      </svg>
                    </span>
                    <span
                      class="capitalize"
                    >
                      bitbucket
                    </span>
                    <span
                      class="css-1wkl091"
                    >
                      <span
                        class="css-f9etm4"
                      >
                        2
                      </span>
                    </span>
                  </div>
                   
                </span>
              </button>
            </div>
            <div
              class="css-gokkc4"
            >
              <div
                role="presentation"
              >
                <button
                  class="css-1vyxgfe"
                  data-testid="product-mark-as-read"
                  type="button"
                >
                  <span
                    class="css-1spmf3f"
                  >
                    <span
                      aria-hidden="true"
                      class="css-1wits42"
                      data-vc="icon-undefined"
                      style="--icon-primary-color: currentColor; --icon-secondary-color: var(--ds-surface, #FFFFFF);"
                    >
                      <svg
                        height="24"
                        role="presentation"
                        viewBox="0 0 24 24"
                        width="24"
                      >
                        <circle
                          cx="12"
                          cy="12"
                          fill="currentcolor"
                          fill-rule="evenodd"
                          r="5"
                        />
                      </svg>
                    </span>
                    <span
                      class="css-b5o75w"
                    >
                      Mark all product notifications as read
                    </span>
                  </span>
                </button>
              </div>
              <div
                role="presentation"
              >
                <button
                  class="css-1vyxgfe"
                  data-testid="product-toggle"
                  type="button"
                >
                  <span
                    class="css-1spmf3f"
                  >
                    <span
                      aria-hidden="true"
                      class="css-snhnyn"
                      data-vc="icon-undefined"
                      style="--icon-primary-color: currentColor; --icon-secondary-color: var(--ds-surface, #FFFFFF);"
                    >
                      <svg
                        height="24"
                        role="presentation"
                        viewBox="0 0 24 24"
                        width="24"
                      >
                        <path
                          d="M8.292 10.293a1.01 1.01 0 0 0 0 1.419l2.939 2.965c.218.215.5.322.779.322s.556-.107.769-.322l2.93-2.955a1.01 1.01 0 0 0 0-1.419.987.987 0 0 0-1.406 0l-2.298 2.317-2.307-2.327a.99.99 0 0 0-1.406 0"
                          fill="currentcolor"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                    <span
                      class="css-b5o75w"
                    >
                      Hide product notifications
                    </span>
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
        <div>
          NotificationRow
        </div>
        <div>
          NotificationRow
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="css-1npayr"
    >
      <div
        class="css-1cphzq1"
      >
        <div
          class="css-1a0x9v0"
        >
          <div
            role="presentation"
          >
            <button
              class="css-eu6vk3"
              data-testid="product-home"
              type="button"
            >
              <span
                class="css-1nqby2s"
              >
                <div
                  class="css-1v6wdk"
                >
                  <span
                    aria-label="Bitbucket"
                    class="css-5vjqu0"
                    role="img"
                    style="--logo-color: inherit; --logo-fill: currentColor;"
                  >
                    <svg
                      aria-hidden="true"
                      fill="none"
                      focusable="false"
                      height="32"
                      viewBox="0 0 32 32"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      
      
                      <path
                        d="m25.586 15.819-1.618 9.885c-.106.598-.528.95-1.126.95H9.122c-.598 0-1.02-.352-1.126-.95L5.146 8.08c-.105-.598.212-.985.775-.985h20.123c.562 0 .88.387.773.985l-.773 4.644c-.106.668-.493.95-1.126.95H12.816c-.176 0-.282.105-.246.316l.95 5.84c.035.14.14.246.281.246h4.362c.141 0 .246-.105.282-.246l.668-4.222c.07-.527.422-.738.915-.738h4.75c.703 0 .914.351.808.95"
                        fill="#1868DB"
                      />
                      
    
                    </svg>
                  </span>
                  <span
                    class="capitalize"
                  >
                    bitbucket
                  </span>
                  <span
                    class="css-1wkl091"
                  >
                    <span
                      class="css-f9etm4"
                    >
                      2
                    </span>
                  </span>
                </div>
                 
              </span>
            </button>
          </div>
          <div
            class="css-gokkc4"
          >
            <div
              role="presentation"
            >
              <button
                class="css-1vyxgfe"
                data-testid="product-mark-as-read"
                type="button"
              >
                <span
                  class="css-1spmf3f"
                >
                  <span
                    aria-hidden="true"
                    class="css-1wits42"
                    data-vc="icon-undefined"
                    style="--icon-primary-color: currentColor; --icon-secondary-color: var(--ds-surface, #FFFFFF);"
                  >
                    <svg
                      height="24"
                      role="presentation"
                      viewBox="0 0 24 24"
                      width="24"
                    >
                      <circle
                        cx="12"
                        cy="12"
                        fill="currentcolor"
                        fill-rule="evenodd"
                        r="5"
                      />
                    </svg>
                  </span>
                  <span
                    class="css-b5o75w"
                  >
                    Mark all product notifications as read
                  </span>
                </span>
              </button>
            </div>
            <div
              role="presentation"
            >
              <button
                class="css-1vyxgfe"
                data-testid="product-toggle"
                type="button"
              >
                <span
                  class="css-1spmf3f"
                >
                  <span
                    aria-hidden="true"
                    class="css-snhnyn"
                    data-vc="icon-undefined"
                    style="--icon-primary-color: currentColor; --icon-secondary-color: var(--ds-surface, #FFFFFF);"
                  >
                    <svg
                      height="24"
                      role="presentation"
                      viewBox="0 0 24 24"
                      width="24"
                    >
                      <path
                        d="M8.292 10.293a1.01 1.01 0 0 0 0 1.419l2.939 2.965c.218.215.5.322.779.322s.556-.107.769-.322l2.93-2.955a1.01 1.01 0 0 0 0-1.419.987.987 0 0 0-1.406 0l-2.298 2.317-2.307-2.327a.99.99 0 0 0-1.406 0"
                        fill="currentcolor"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                  <span
                    class="css-b5o75w"
                  >
                    Hide product notifications
                  </span>
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div>
        NotificationRow
      </div>
      <div>
        NotificationRow
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
